# prevsis

./: mypy.ini  pyproject.toml
src/app/repository/: clientrepo.py  rfprepo.py
src/app/usecase/clients/: create.py
src/app/usecase/file/: downloadfile.py  readfiles.py  uploadfile.py
src/app/usecase/rfp/: create.py
src/domain/entity/: client.py  fupitem.py  job.py  rfp.py
src/domain/vo/: address.py  cpf.py  file.py  personname.py
src/infra/database/: db.py
src/infra/database/models/: client.py  rfp.py
src/infra/repository/: clientrepo.py  rfprepo.py
tests/: test_clientreposqlalchemy.py  test_cpf.py  test_name.py
