[tool.poetry]
name = "prevsis"
version = "0.1.0"
description = ""
authors = ["rodbell"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.11.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
ruff = "^0.11.3"
mypy = "^1.15.0"
vulture = "^2.14"
bandit = "^1.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
mypy_path = "src"

[tool.black]
line-length = 88 

[tool.flake8]
max-line-length = 88

[tool.pytest.ini_options]
pythonpath = ["src"]